--- a/vignettes/futures.Rmd
+++ b/vignettes/futures.Rmd
@@ -82,5 +82,5 @@ First, if the return value is very large, the copying process can take some time
 Second, objects that refer to native resources are unlikely to work in this direction either; just as you can't use the parent's database connections in the child process, you also cannot have the child process return a database connection for the parent to use.
 
 <div style="font-size: 20px; margin-top: 40px; text-align: right;">
-Next: [Using promises with Shiny](shiny.html)
+Next: [Advanced `future` and `promises` usage](future_promise.html) and [Using `promises` with Shiny](shiny.html)
 </div>
