--- a/vignettes/futures.Rmd
+++ b/vignettes/futures.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Launching tasks with future"
+title: "Launching tasks with `future`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
