--- a/vignettes/combining.Rmd
+++ b/vignettes/combining.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Combining promises"
+title: "Combining `promises`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
