--- a/vignettes/future_promise.Rmd
+++ b/vignettes/future_promise.Rmd
@@ -5,24 +5,44 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteIndexEntry{5. Advanced future and promises usage}
   %\VignetteEncoding{UTF-8}
+resource_files:
+  - future_promise/future.png
+  - future_promise/blocked_future_promise.png
 ---
 
-This article discusses the benefits of using `promises::future_promise()` over a combination of `future::future()` + `promises::promise()` to better take advantage of computing resources available to your main R session. To demonstrate these benefits, we'll walk-through a use-case with the `plumber` package. ([See here](https://www.rplumber.io/) to learn more about `plumber` and [this article](futures.html) to learn more about `future`.)
+This article discusses the benefits of using `promises::future_promise()` over a combination of `future::future()` + `promises::promise()` to better take advantage of computing resources available to your main R session. To demonstrate these benefits, we'll walk-through a use-case with the `plumber` package. ([See here](https://www.rplumber.io/) to learn more about `plumber` and [the previous article](futures.html) to learn more about `future`.)
 
-In an ideal situation, the number of available `future` (>= 1.21.0) workers (`future::nbrOfFreeWorkers()`) is always **more than** the number of `future::future()` jobs. However, if a `future` job is attempted when the number of free workers is `0`, then `future` will block the current R session until one becomes available. For a concrete example of where this can become an issue, let's imagine a scenario with seven `plumber` requests being received at the same time with only two `future` workers.
+## The problem with `future()`+`promise()`
 
-The figure below displays the time required to process those seven requests. The trailing number at the end of each request is the request's arrival order.  The first six requests use `future::future()` and will take ~10s to compute. The final request will not be using any form of `future` or `promises`.
+In an ideal situation, the number of available `future` _workers_ (`future::nbrOfFreeWorkers()`) is always **more than** the number of `future::future()` _jobs_. However, if a `future` job is attempted when the number of free workers is `0`, then `future` will block the current R session until one becomes available. 
 
-Using two `future` workers, the execution timeline would look like:
+For a concrete example, let's imagine a scenario, where seven `plumber` requests are received at the same time with only two `future` workers available. Also, let's assume the `plumber` route(s) serving the first 6 requests use `future::future()` and take ~10s to compute `slow_calc()`: 
 
-![Early workers take more time than expected. Main R session is blocked](./future_promise/future.png){width=75%}
+```r
+#* @get /slow/<k>
+function() {
+  future::future({
+    slow_calc()
+  })
+}
+```
+
+Let's also assume the `plumber` route serving the last request does not use any form of `future` or `promises` and takes almost no time to compute.
+
+```r
+#* @get /fast/<k>
+function() {
+  fast_calc()
+}
+```
 
 
-While the overall time is faster than if the requests were serially executed, the turn around time for earlier routes (e.g. `/slow/1`) will be longer than expected. This is because the main R session is blocked waiting for a `future` worker to become available.  Blocking the main R session prevents any pending `promises` objects (or `later` callbacks) from being executed, such as responding to a `plumber` route executed by `future`.
+The figure below depicts the overall timeline of execution of these 7 requests under the conditions we've outlined above. Note that the y-axis is ordered from first request coming in (`/slow/1`) to the last request (`/fast/7`).
 
-![future does not respond to anything until the main R session is _free_](./future_promise/blocked_future.png){width=75%}
+<img src = "future_promise/future.png" width = "75%" alt="Early workers take more time than expected. Main R session is blocked" />
 
-The video below animates how the main R process has to wait for `future` workers to become available before being able to process the next incoming `plumber` request:
+Note how R has to wait 20s before processing the 7th request (shown in green). This is a big improvement over not using `future`+`promises` at all (in that case, R would have to wait 60s before processing). However, since there are only two `future` workers available R still has to wait longer than necessary to process that last request because the main R session must wait for a `future` worker to become available. The video below animates this behavior:
+
 
 ```{r, echo = FALSE}
 library(vembedr)
@@ -31,21 +51,27 @@ embed_vimeo("505287449") %>%
 ```
 
 
-## `future_promise()`
+## The solution: `future_promise()`
 
-`future_promise()` creates a _promise_ that will resolve to the final value of `future::future()` execution.
+The advantage of using `future_promise()` over `future::future()` is that even if there aren't `future` workers available, the `future` is scheduled to be done when workers become available via `promises`. In other words, `future_promise()` ensures the main R thread isn't blocked when a `future` job is requested and can't immediately perform the work (i.e., the number of jobs exceeds the number of workers).
 
-The advantage of `future_promise()` is that it will not attempt `future` work unless a `future` worker is available. If no workers are available (due to other `future::future()` calls), `future_promise()` will continue to periodically check for a worker to become available. This keeps the main R session available even if there are more `future_promise()` objects submitted than there are `future` workers.
+Continuing with the example above, we can swap out the calls to `future::future()` with `future_promise()`.  
 
-Continuing with the example above, we can swap out the calls to `future::future()` with `future_promise()`.  In the timeline plot below, the `/fast/7` route will not have to wait on any `future` work to finish processing.  While waiting for the `future` jobs to complete, the main R session is not blocked.
+```r
+#* @get /slow/<k>
+function() {
+  promises::future_promise({
+    slow_calc()
+  })
+}
+```
 
-Using two `future` workers and `future_promise()` instead of `future::future()`, the execution timeline would look like:
 
-![future_promise() keeps the main R session free](./future_promise/blocked_future_promise.png){width=75%}
+With this change to `future_promise()`, note how the `/fast/7` route now does not have to wait on `future` work to finish processing. Therefore, `plumber` can complete the last requests almost immediately:
 
-Only four main timepoints that caused the main R session to be busy. The remaining time allows for other `promises` objects (or `later` callbacks) to execute freely.
+<img src = "future_promise/blocked_future_promise.png" width="75%" alt="future_promise() keeps the main R session free" />
 
-The video below animates how `future_promise()` leverages `promises` if no `future` workers are available:
+The vertical gray bars in the figure above represent timepoints where the main R session is actually busy. Outside of these gray areas, the R session is free to do other things, for example, executing other `promises` or, more generally, non-`future` work. The video below animates this behavior:
 
 ```{r, echo = FALSE}
 library(vembedr)
@@ -53,14 +79,11 @@ embed_vimeo("505286442") %>%
   use_align("center")
 ```
 
-
-
-
 ## Variable scope in `future_promise()` and `future::future()`
 
 `future_promise()` is a promise **first** and executes using `future::future()` **second**. When using `future_promise()`, you should use the same precautions that you would use with a regular `promises::promise()`.
 
-When `future` blocks on the main R session, this prevents values from being changed before they are submitted to the external worker.  While a `promise` waits to be executed, it is known that variables that have **not been `forced()`** or properly **scoped** can change from their expected values before evaluation occurs. This can also occur with properly scoped environment values as only the _pointer_ to the environment is static. This allows for the values within the environment to be altered before the `promise` is executed.
+When `future` blocks on the main R session, this prevents values from being changed before they are submitted to the external worker.  While a `promise` waits to be executed, it is known that variables that have **not been `forced()`** or properly **scoped** can change from their expected values before evaluation occurs. This can also occur with properly scoped environment values as only the _pointer_ to the environment is static. This allows for the values within the environment to be altered before the `promise` is executed, which is likely undesirable.
 
 
 #### Scope
