--- a/vignettes/future_promise.Rmd
+++ b/vignettes/future_promise.Rmd
@@ -78,3 +78,7 @@ library(vembedr)
 embed_vimeo("505286442") %>%
   use_align("center")
 ```
+
+<div style="font-size: 20px; margin-top: 40px; text-align: right;">
+Next: [Using `promises` with Shiny](shiny.html)
+</div>
